--- a/.github/workflows/contribution-city.yml
+++ b/.github/workflows/contribution-city.yml
@@ -10,20 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      
+
       - name: Generate Contribution City
         run: node generate-city.js
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
           GITHUB_USERNAME: ${{ github.repository_owner }}
-      
+
       - name: Commit & Push
         run: |
           git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.email github-actions[bot]@users.noreply.github.com
           git add -A .
-          git diff --quiet && git diff --staged --quiet || (git commit -m "🏙️ Update contribution city" && git push)
+          if git commit -m "🏙️ Update contribution city" ; then
+            git push origin HEAD:${{ github.ref_name }}
+          fi
